Fixed overflow

--- a/pages/OurProducts/products.module.css
+++ b/pages/OurProducts/products.module.css
@@ -17,17 +17,19 @@
 }
 
 .goldTypeHolder {
-	width: 100vw;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	width: 90vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .goldTypeContainer {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin:5vw 3vw;
+	margin:5vw 2vw;
 }
 
 .goldTypeContainer:not(:last-child) {
@@ -39,14 +41,14 @@
 	text-align: center;
 	font-family: "Ubuntu","Cantarell","Open Sans","Helvetica Neue",sans-serif;;
 	font-weight: 200;
-	font-size: 7rem;
+	font-size: 4rem;
 	color: rgb(156, 156, 156);
 	display: block;
 }
 
 .separatorHyphen {
 	display: block;
-	width: 7ch;
+	width: 3ch;
 	height: 1px;
 	background-color: #ddc260;
 	margin: 0 0.5rem;
@@ -54,16 +56,20 @@
 
 .barsContainer {
 	color: #dec25f;
-	display: flex;
-	width: max-content;
-	margin: 0 auto;
-	justify-content: center;
-	align-items: center;
-	background-color: #0e0d12;
-	padding: 6rem 4rem;
-	border-radius: 50px;
-	margin-bottom: 4rem;
-	max-width: 90vw;
+    display: flex;
+    width: max-content;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    background-color: #0e0d12;
+    padding: 6rem 2rem;
+    border-radius: 50px;
+    margin-bottom: 4rem;
+    max-width: 85vw;
+}
+
+.barsImage {
+	width: 100%;
 }
 
 .goldBar {
